Add tablet menu dropdown and break for tablet view

--- a/saasCommon.css
+++ b/saasCommon.css
@@ -96,7 +96,7 @@ img {
 }
 
 .page-container {
-    position: relative;
+    /* position: relative; */
     height: 100vh;   
 }    
 
@@ -146,6 +146,11 @@ img {
     align-items: center;
 }
 
+.right-head-nav2-flex {
+    display: flex;
+    width: 100%;
+}
+
 .right-head-nav2 {
     display: none;
 }
@@ -191,13 +196,14 @@ img {
 
 .second-section {
     display: flex;
-    position: absolute;
-    width: 100%;
+    flex-wrap: wrap;
     justify-content: space-around;
-    padding: 8rem 2rem;
+    padding: 4rem 2rem;  
 }
 
 .left-second-section {
+    display: flex;
+    flex-direction: column;
     max-width: 20.875rem;
     padding-right: 1rem;
     margin-right: 3rem;
@@ -208,25 +214,36 @@ img {
     font-weight: 500;
     margin-bottom: 1rem;
 }
+
 .left-second-section p {
+    max-width: 20.875rem;
     margin-bottom: 1.5rem;
 }
-
+.play-button-section {
+    max-width: 20.875rem;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
 .playButton i{
     margin-right: .5rem;
     border-radius: 30rem;
 }
 
 .left-second-section a {
-    padding-left: 1rem;
+    margin-left: 1rem;
     
 }
 
 /* //////////////////////////// */
 .right-second-section {
-    max-width: 50rem;
+    display: grid;
+    min-width: 1px;
 }
+
 .brandGrid {
+    max-width: fit-content;
+    max-height: fit-content;
     margin-right: 1rem;
     margin-left: 1rem;
     display: grid;
@@ -309,6 +326,11 @@ img {
 
 /* ///////////////////////////////////////////// */
 .third-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.third-section-flex {
     margin-top: 6rem;
     text-align: center;
     
@@ -327,7 +349,6 @@ img {
     width: 100%;
     justify-content:center;
     flex-wrap: wrap;
-
 }
 
 .fourth-section-flex {
@@ -378,8 +399,7 @@ img {
 
 .fourth-section-card a {
     padding-top: 0rem;
-    margin-top: 0rem;
-   
+    margin-top: 0rem; 
 }
 
 /* ///////////////////////////////////////// */
@@ -400,7 +420,7 @@ img {
 .fifth-section-flex {
     display: flex;
     flex-wrap: wrap;
-    background-color: var(--lightBlueBackgroung);
+    background-color:#F8FAFE;
     margin-right: 2rem;
     padding: 4rem 0rem 0rem 0rem;
     width: 100%;
@@ -409,9 +429,17 @@ img {
 }
 /* /////// */
 .fifth-section-left {
+    display: flex;
+    flex-direction: column;
     width: 23rem;
     margin: 2rem 3rem 2rem 2rem;
 }
+
+.fifth-section-left h2{
+    font-size: var(--26px);
+    font-weight: 500;
+}
+
 
 /* /////// */
 
@@ -557,13 +585,13 @@ img {
 .ninth-left {
     background-image: url("saas-project-assets/abstract/dots.svg");
     background-repeat: no-repeat;
-    padding-left: 3.5rem;
+    padding-left: 3rem;
     padding-bottom: 3.5rem;
 
 }
 
 .ninth-left-image-container {
-    width: 23.188rem;
+    width: 23.18rem;
     height: 26.563rem;
     margin-right: 4rem;
 }
@@ -575,7 +603,7 @@ img {
 .ninth-right {
     display: flex;
     flex-direction: column;
-    width: 30.125rem;
+    width: 29rem;
     justify-content: center;
 }
 
@@ -713,7 +741,10 @@ img {
                         }
                         
                         
-                        .tirteenth-left-card-bottom{}
+                        .tirteenth-left-card-bottom{
+                            display: flex;
+                            flex-direction: column;
+                        }
                         
                         .tirteenth-left-card-bottom p {
                             margin-bottom: 2rem;
@@ -894,18 +925,18 @@ img {
                         border-color: rgb(227, 224, 224);
                         }
 
-                    .contact-form textarea {
+                    #comments {
                         line-height: 1.5rem;
                         border-radius: .25rem;
                         border-style: solid;
                         border-color: rgb(227, 224, 224);
                         width: 23rem;
+                        height: 10rem;
                         margin: 1rem 0rem 0rem -1rem;
                     }
                     
                     .contact-form div {
                         display: flex;
-                        /* justify-content: space-between; */
                     }
 
                     .checkbox-section {
@@ -964,8 +995,8 @@ img {
         }
 
                 .fifteenth-flex-card{
-                    /* display: grid; */
-                    padding: 1rem
+                    padding: 1rem;
+                    width:12rem;
                 }
 
                         .contact-logo {
@@ -1048,7 +1079,7 @@ img {
     display: flex;
     justify-content: center;
 }            
-        .copywtight {
+        .copywright {
             justify-self: center;
             min-width: 43.75rem;
             text-align: center;
@@ -1068,18 +1099,204 @@ img {
 /* /////////////////////////////////////// */
 
 
-@media (min-width: 768px) and (max-width: 1024px){
-   
+@media (min-width: 768px) and (max-width: 1023px){
+    .projectLogoContainer {
+        height: 6rem;
+        width: 15rem;
+        margin-top: -1rem;
+    }
+
+    .second-section {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-top: -5rem;
+    }
+
+    .left-second-section {
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 5rem;
+    }
+    
+    .left-second-section h1,
+    .left-second-section p,
+    .left-second-section div {
+        width: 20.875rem;
+    }
+    
+    .play-button-section {
+        justify-content: center;
+    }    
+    .right-second-section {
+        margin-bottom: -5rem;
+    }
+
+    .third-section {
+        margin-top: 25rem;
+     }
+
+    .fourth-section-flex {
+        justify-content:space-evenly;
+        display: flex;
+        flex-wrap: wrap;
+        padding: 1rem 1rem;
+        width: 100%;
+    }
+
+    .fourth-section-card {
+        width: 21.188rem;
+        height: 16.375rem;
+    }
+    .fifth-section-flex {
+        padding-top: 0rem;
+    }
+
+    .fifth-section-left {
+        width:100%;
+        height: 12.5rem;
+        text-align: center;
+        justify-content:center;
+        align-items: center;
+        margin: 0rem 2rem 1rem 2rem;
+
+    }
+
+    .fifth-section-right {
+        width:100%;
+        height: 22.063rem;
+        margin: 0rem 0rem 0rem 0rem;
+        padding:0rem;
+        justify-content: center;
+        align-items: flex-start;
+    }
+
+    .banner-one-container {
+        max-width:100%;
+        background-color: #F8FAFE;
+    }
+
+    .ninth-section-flex  {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .ninth-right {
+        margin-top: 1rem;
+        align-items: center;
+        text-align: center;
+    }
+ 
+    .tirteenth-left-card { 
+        width: 42.5rem;
+        padding: 0rem 3rem;
+        margin-bottom: 2rem;
+    }
+
+    .tirteenth-left-card-top {
+        justify-content: center;
+    }
+    .tirteenth-left-card-bottom{
+        align-items: center;
+    }
+
+    .fourteenth-section{
+        flex-direction: column;
+    }
+
+    .fourteenth-section-left{
+        width: 100%;
+        height: 15rem;
+        flex-wrap: wrap;
+    }
+    .hire-us {
+        width: 25rem;
+    }
+
+    .fourteenth-section-right {
+        width: 100%;
+        background-color: #F8FAFE;
+        align-items: center;
+        border-radius: 1rem;
+    }
+
+    .contact-form {
+        width: 44.25rem;
+    }
+    .contact-form p {
+        width: 100%;
+    }
+    .contact-form input,
+    .contact-form select
+        {
+            width: 20rem;
+        }
+    .checkbox-section {
+        width: 43rem;
+    }
+    .checkbox-section input {
+        margin: 0rem -1rem 0rem -8rem;
+    }
+    .checkbox-section label {
+        margin-left: -5rem;
+        width: 37.938rem;
+        }
+    
+    #comments {
+        width: 42rem;
+        height: 12rem;
+    }
+
+    .privacy-policy {
+        width: 100%;
+    }
+
+    .privacy-policy p {
+        /* background-color: #20335b; */
+        padding-left: 3.2rem;
+        text-align:left;
+        width: fit-content;
+    }
+
+    .fifteenth-flex {
+        display: grid;
+        grid-template-columns: repeat(20rem 12rem 12rem);
+        grid-template-rows: 1fr 1fr ;
+        justify-content: center;
+        gap: .5rem;
+        grid-template-areas: 
+            "contactBox1  contactBox2 contactBox3"
+            "contactBox4 contactBox4 contactBox5"
+        ;
+    }
+
+
+    #contactBox1 {grid-area: contactBox1;
+        justify-self: end;
+        width: 20rem;
+    }
+    #contactBox2 {grid-area: contactBox2;}
+    #contactBox3 {grid-area: contactBox3;}
+    #contactBox4 {grid-area: contactBox4;
+        justify-self:end;
+    }
+    #contactBox5 {grid-area: contactBox5;}
+
+
+   /* //////////////////////////////////////// */
     .right-head-nav {
         display: none;
     }
 
     .right-head-nav2 {
         display: flex;
+        flex-wrap: wrap;
         flex-direction: column;
         background-color: transparent;
         height:fit-content;
         width: 100%;
+        z-index: 10;
     }
     
     .hamburger {
@@ -1119,7 +1336,6 @@ img {
     #menu6 {
         grid-area:menu6;
         justify-self: center;
-        align-self: ;
 
     }
 
@@ -1138,7 +1354,7 @@ img {
         align-items: baseline;
         justify-content: space-between;
         width: 100%;
-        min-height:40rem;
+        min-height:15rem;
         transform: rotateX(0deg);
         z-index: 11;
         box-shadow: 0rem -.10rem .5rem .25rem rgb(190, 188, 188);
