--- a/1023px.css
+++ b/1023px.css
@@ -1,6 +1,6 @@
 
 @media (max-width: 1023px){
-    
+
     .first-second-section {
         background-position: right;}
 
@@ -8,6 +8,11 @@
         height: 6rem;
         width: 15rem;
         margin-top: -1rem;
+    }
+
+    .right-head-nav2-flex {
+        display: flex;
+        padding: 2rem 10rem 2rem 10rem;
     }
 
     .second-section {
@@ -23,12 +28,7 @@
         justify-content: center;
         margin-bottom: 5rem;
     }
-    
-    .left-second-section h1,
-    .left-second-section p,
-    .left-second-section div {
-        width: 20.875rem;
-    }
+
     
     .play-button-section {
         justify-content: center;
@@ -68,8 +68,6 @@
     }
 
     .fifth-section-right {
-        width:100%;
-        height: 28rem;
         margin: 0rem 0rem 0rem 0rem;
         padding:0rem;
         justify-content: center;
@@ -187,7 +185,7 @@
     }
     #contactBox5 {grid-area: contactBox5;}
 
-
+   
    /* //////////////////////////////////////// */
     .right-head-nav {
         display: none;
@@ -255,7 +253,7 @@
         grid-template-areas: 
         "menu1 menu2 menu3 menu4 menu5"
         "menu6 menu6 menu6 menu6 menu6";
-        width: 100%;
+        width: 30rem;
         min-height:90vh;
         transform: rotateX(0deg);
         z-index: 11;
