--- a/767px.css
+++ b/767px.css
@@ -1,14 +1,52 @@
 @media (max-width:767px) {
     
-    .page-container {
-        min-width: 47.5rem;
+
+    .right-head-nav2-flex{
+        padding: 1rem 4rem 1rem 2rem;
+    }
+    .first-section-container{
+        width: 96%;
+    }
+    .projectLogoContainer{
+        height: 4rem;
+        width: 9rem;
+        margin-top: 1rem;
+    }
+
+    .second-section {
+        padding: 2rem 2rem;  
+        align-items: center
+
     }
     .left-second-section h1 {
         font-size: var(--26px);
     }
 
+        
+    .left-second-section h1,
+    .left-second-section p,
+    .left-second-section div {
+        width: 15.875rem;
+    }
+
     .brandGrid {
-        gap: 0rem;
+        margin-right: .5rem;
+        margin-left: .5rem;
+        grid-template-columns: repeat(6, 2.5rem);
+        grid-template-rows: repeat(5, 3.0rem);
+        place-items: start center ;
+        gap: .05rem;
+    }
+
+    .img-container {
+        height: 3.5rem;
+        width: 3.5rem;
+    }
+
+    .gOne,
+    .gTwo {
+        height: 2.7rem;
+        width: 2.75rem;
     }
 
     .fourth-section-card {
@@ -16,33 +54,50 @@
         height: 17.375rem;
     }
 
-    .fifth-section-right {
-        height: 27rem;
-    }
+
+  
     .hr-container {
         display: none;
+    }
+    .sixth-section-container {
+        max-width: 20rem;
     }
 
     .seventh-section {
         flex-direction: column;
         margin-top: -2rem;
+        padding: .5rem 1rem;
+        align-items: center;
     }
 
     .seventh-section-container {
         flex-direction: row;
         margin-top: .5rem;
-        width: 100%;
+        margin-left: 0rem;
     }
-
+    
     .circle {
-        margin: 0rem 2rem 0rem 3rem;
+        margin: 0rem;  
     }
+    
     .seventh-section-container h2 {
+        font-size: var(--18px);
         margin-left: 1rem;
+        width: 15rem;
     }
-
+    .ninth-left {
+        max-width: 21rem;
+        max-height: 23.5rem;
+    }
+    .ninth-left-image-container {
+        width: 18rem;
+        height: 22.563rem;
+        margin-right: 2rem;
+    }
+    
     .ninth-right p {
         margin-bottom: 2rem;
+        max-width: 21rem;
     }
 
     .eleventh-section-flex {
@@ -64,41 +119,61 @@
     }
 
     .fourteenth-section-left {
-        height: 23rem;
         justify-content: center;
         align-items: center;
         text-align: center;
+        height: 30rem;
     }
 
-    .hire-us {
-        text-align: center;
-        width: 39rem;
+    .hire-us,
+    .quote {
+        width: 10rem;
+    }
+  
+    .fourteenth-image-card{
+        border-radius: 10rem;
+        width: 2.5rem;
+        height: 2.5rem;
+    }
+    
+    .first-sectionc3 {
+        width: 3rem;
+        height: 3rem;
     }
 
-    #checkbox-section {
-        flex-direction:row;
-    }
+    
     .fourteenth-section-right div{
         flex-direction: column;
     }    
+    .contact-form {
+        width: 22rem;
+    }
 
-    .contact-form input,
-    .contact-form select
-        {
-            width: 40rem;
-        }
+    #comments {
+        width: 20rem;
+    }
+
     .checkbox-section {
-        width: 40rem;
+        width: 20rem;
     }
+    
+    #checkbox-section {
+        flex-direction:row;
+    }
+    
     .checkbox-section input {
-        margin: 0rem -1rem 0rem -19rem;
+        margin: 0rem 0rem 0rem 0rem;
+        width: 2rem;
     }
+    
     .checkbox-section label {
-        margin-left: -15rem;
-        width: 37.938rem;
+        font-size: var(--12px);
+        margin-left: 1rem;
+        width: 17rem;
         }
 
     .privacy-policy a {
+        font-size: var(--12px);
         display: none;
     } 
 
@@ -126,12 +201,21 @@
 
     .terms-socials-right {
         margin-top: .5rem;
+        flex-direction: column;
+    }
+
+    .socials{
+        margin-bottom: 1rem;
+    }
+
+    .copywright {
+        min-width: 20rem;
     }
 
     [aria-expanded="true"] ~ ul {
         display: flex;
         flex-direction: column;
-        width: 100%;
+        width: 19rem;
         min-height:100vh;
         transform: rotateX(0deg);
         z-index: 11;
