--- a/sections.css
+++ b/sections.css
@@ -1,7 +1,6 @@
 .first-section-container {
     display: flex;
     flex-wrap: wrap;
-    width: 100%;
     justify-content: center;
     padding: 0rem 0rem;
     margin: 0rem;
@@ -39,15 +38,16 @@
                     padding: 2rem;
                 }
 
-                .right-head-nav2-flex {
-                    display: flex;
-                    width: 100%;
-                    padding: 2rem;
-                }
+        .right-head-nav2-flex {
+            display: flex;
+            width: 100%;
+            padding: 2rem 30rem 2rem 2rem;
+        }
 
-                .right-head-nav2 {
-                    display: none;
-                }
+        .right-head-nav2 {
+            display: none;
+
+        }
                         .hamburger {
                             height: 3rem;
                             width: var(--50px);
@@ -321,7 +321,7 @@
                 .fifth-section-left {
                     display: flex;
                     flex-direction: column;
-                    width: 23rem;
+                    /* width: 23rem; */
                     margin: 2rem 3rem 2rem 2rem;
                 }
 
@@ -336,7 +336,6 @@
                 .fifth-section-right {
                     display: flex;
                     justify-content: end;
-                    min-width: 32rem; 
                     padding-top: 2rem;
                 }
 
@@ -357,7 +356,6 @@
     margin-top: 3rem;
     justify-content: center;
     align-items: center;
-    width: 100%;
     flex-wrap: wrap;
 }
 
@@ -398,7 +396,6 @@
             display: flex;
             flex-direction: column;
             align-items:center;
-            width: 18rem;
             margin: -3em 0em 2em 0em;
         }
 
@@ -460,7 +457,6 @@
 
 .ninth-section {
     display: flex;
-    width: 100%;
     justify-content: center;
     flex-wrap: wrap;
     margin-top: 5rem;
@@ -471,8 +467,6 @@
             display: flex;
             flex-wrap: wrap;
             justify-content:center;
-            width: 100%;
-
         }
 
         .ninth-left {
@@ -496,7 +490,6 @@
         .ninth-right {
             display: flex;
             flex-direction: column;
-            width: 29rem;
             justify-content: center;
         }
 
@@ -540,7 +533,6 @@
 .tenthSection {
     display: flex;
     justify-content: center;
-    width: 100%;
     margin: 1rem;
     }
 
@@ -554,16 +546,15 @@
 
 .eleventh-section{
     display: flex;
-    width: 100%;
     margin: 1rem 0rem 2rem 0rem;
 }
 
         .eleventh-section-flex {
-            display: flex;
-            justify-content: space-around;
             width: 100%;
+            display: flex;
             flex-wrap: wrap;
-        }
+            justify-content: space-around;
+                }
 
                 .eleventh-logo-container {
                     width: 6.721rem;
@@ -575,7 +566,6 @@
 
 .twelfth-section {
     text-align: center;
-    width: 100%;
     margin: 4rem 0rem 4rem 0rem;
 }
 
@@ -594,7 +584,6 @@
 
 .tirteenth-section {
     display: flex;
-    width: 100%;
     padding: 2rem;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -702,7 +691,6 @@
 .fourteenth-section{
     display: flex;
     justify-content: space-around;
-    width: 100%;
     flex-wrap: wrap;
     background-color: #20335b;
     padding: 0rem 2rem;
@@ -944,17 +932,20 @@
             display: flex;
         }                
                        
-            .terms-socials-icon-container {
-                height: 1.87rem;
-                width: 1.87rem;
-                margin: 0rem .5rem;
+            .socials{
+                display: flex;
             }
+                .terms-socials-icon-container {
+                    height: 1.87rem;
+                    width: 1.87rem;
+                    margin: 0rem .5rem;
+                }
 
-                    .terms-socials-icon-container img{
-                        width: 100%;
-                        height: 100%;
-                    }
-            
+                        .terms-socials-icon-container img{
+                            width: 100%;
+                            height: 100%;
+                        }
+                
             .country {
                 display: flex;
                 border-style: none;
